Bug 79358 - Properties "Create from" of index/table are changed on save
Summary: Properties "Create from" of index/table are changed on save
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.beta1
Hardware: All All
: high critical
Assignee: Michael Stahl
URL:
Whiteboard: odf target:4.4.0 target:4.3.0
Keywords: dataLoss, regression
: 79355 80143 80529 80945 (view as bug list)
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-05-28 08:08 UTC by ribotb
Modified: 2015-12-18 09:53 UTC (History)
13 users (show)

See Also:
Crash report or crash signature:


Attachments
template with embedded index/table (12.25 KB, application/vnd.oasis.opendocument.text-template)
2014-05-28 08:10 UTC, ribotb
Details
Document with Index, Headers with user-defined Styles (12.67 KB, application/vnd.oasis.opendocument.text)
2014-06-15 06:57 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ribotb 2014-05-28 08:08:11 UTC
Hi,

Version: 4.3.0.0.beta1
Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f
Win7/x86

I created a template with older version of LO. This template contains an embedded index/table with these properties "Create from":
- Outline: checked
- Additional Styles: not checked
- Index marks: checked

The properties of the index/table of a document created from this template are changed.

Procedure to reproduce:
- Open the template; File > New > Templates
- Save the document named Untitled 1: Save As Untitled 1 or any name
- Close document
- Re-open the document
- Edit Index/table: 

The properties described above have changed in :
- Outline: not checked
- Additional Styles: not checked
- Index marks: checked

My template in attachment.

Regards,
Bernard
Comment 1 ribotb 2014-05-28 08:10:16 UTC
Created attachment 100013 [details]
template with embedded index/table
Comment 2 ribotb 2014-05-28 08:16:33 UTC
I forgot: 

The consequence of the change in properties is : when updating the index/table  of the document, the index/table content is deleted (not the title).
Comment 3 Jacques Guilleron 2014-05-29 12:02:19 UTC
*** Bug 79355 has been marked as a duplicate of this bug. ***
Comment 4 Jacques Guilleron 2014-05-29 12:14:41 UTC
Hello Bernard,

Save a document from the template change its properties:
"Additional Styles" is checked, others unchecked, instead of 
"Outline" and "Index marks" checked and "Additional Styles" unchecked.
In this case, Contents table disappears on update.

I confirm this behavior with LO 4.3.0.0.beta1
Build ID: 2e39c7e59c8fc8b16a54c3d981dceef27fb0c07f
Windows 7 Home Premium
Works correctly with LO 4.2.4.2 
Build ID: 63150712c6d317d27ce2db16eb94c2f3d7b699f8.

I wait for your confirmation,

Jacques
Comment 5 Kevin Suo 2014-05-30 00:42:04 UTC
Bug 79345 may be related, adding as see also.
Comment 6 Robert Großkopf 2014-06-15 06:48:29 UTC
Could confirm this buggy behavior for OpenSUSE 12.3 64bit rpm Linux and LO 4.3.0.0beta2

It is not only a problem of a template. I have the same problem with an existing document when I have created my own styles for the headers. When I reopen the document and will refresh the index all content of the index seems to be gone. The properties have changed from "Outline" and "Index marks" to "Additional Styles".
Comment 7 Robert Großkopf 2014-06-15 06:57:06 UTC
Created attachment 101084 [details]
Document with Index, Headers with user-defined Styles

Open the document in any other LO-version before 4.3
Refresh the index. Works.
Open the document in Lo 4.3
Refresh the index. Works. Do something in the document, for example open the "Edit Index/Table" of the index and have a look at "Create From".
Save and close the document.
Reopen the document.
Refresh - content of the index seems to be gone.

Now have a look at "Insert Index/Table" for this index. Look at "Create From". It has been changed to "Additional Styles".
Comment 8 Jochen 2014-06-15 07:16:14 UTC
I can confirm that bug is not fixed.

Set importance to "high" and "major"
Reason: content of the index can´t be seen after refresh -> Bug: in "Create From" it has been changed to "Additional Styles".
Workaround: manual adjustment
Comment 9 Jacques Guilleron 2014-06-17 19:49:41 UTC
*** Bug 80143 has been marked as a duplicate of this bug. ***
Comment 10 k-j 2014-06-19 19:35:42 UTC
Can confirm it with LibO 4.3.0 RC1 WIN 8.1
Comment 11 ribotb 2014-06-20 21:50:17 UTC
Hi,

Bug still present in
Version: 4.3.0.1
Build ID: 67f5430184326974072b65403ef1d9d934fc4481
Win 7/x86

Bernatd
Comment 12 pierre-yves samyn 2014-06-26 05:11:02 UTC
*** Bug 80529 has been marked as a duplicate of this bug. ***
Comment 13 Jacques Guilleron 2014-07-03 16:57:52 UTC
Hi all,

A user on French Lists noticed that: 
After an update, save your work, even if the index is not visible. 
Next reopening, update the index. 
The index is again visible with your added work.
Index Properties (Outline, Additional Styles, Index Marks) change too.

Regards,

Jacques
Comment 14 Jean-Baptiste Faure 2014-07-05 07:34:49 UTC
(In reply to comment #6)
> Could confirm this buggy behavior for OpenSUSE 12.3 64bit rpm Linux and LO
> 4.3.0.0beta2
> 
> It is not only a problem of a template. 

I confirm this. Summary updated.
Still there in LO 4.3.1.0.0+ (Build ID: 6598676ab061b72e66275fcf45098b9f45d459fa)

Best regards. JBF
Comment 15 Terrence Enger 2014-07-06 01:12:32 UTC
*** Bug 80945 has been marked as a duplicate of this bug. ***
Comment 16 Michael Stahl 2014-07-07 22:19:06 UTC
bibisect range:
 11b81c1026c17548bfdbb861ac696f9c6acc628e..1e5b495a882493a81cc82ee34e3339b071bc162d

regression from:

commit ccfbc9e1791dd764bb06b87b3c65a7d2b76a35f2
Author:     Michael Stahl <mstahl@redhat.com>
AuthorDate: Tue Apr 29 15:58:11 2014 +0200

    fdo#76696: CurTOXType::GetFlatIndex(): fix inverted conditional
Comment 17 Michael Stahl 2014-07-09 23:03:39 UTC
actually comment #16 is wrong... that commit just toggled
from one wrong fixed set of flags to a different
wrong fixed set of flags...

try this again:
 5b4b6b2aad548cdc27ba2aa7d87ff584ec7e97dd..b7c3e851465638d4416ca8837937946353561088 

regression from:

commit 6af1e845baa0ec63ce16f25868e5e3313bd647bb
Author:     Matteo Casalin <matteo.casalin@yahoo.com>
AuthorDate: Sun Mar 23 22:08:32 2014 +0100

    sal_uInt16 to sal_(u)Int32 + some constifications

... which broke the ODF import but it turns out that the fix
for that is commit ccfbc9e1791dd764bb06b87b3c65a7d2b76a35f2 :-/

so between those two commit something else broke the export...

let's try this another time, and check if the
text:use-index-marks="false" attribute is stored...

 6ba9692d8bbe3e3c245aca9a7c928e81178d05f1..1393ba60b1eb43b55820f74c393da04308221d97

regression from:

commit 8a81f542a6ca566661305c53899b7e422cbaa432
Author:     Noel Grandin <noel@peralex.com>
AuthorDate: Mon Apr 7 16:42:18 2014 +0200

    xmloff: sal_Bool->bool
Comment 18 Michael Stahl 2014-07-10 13:35:15 UTC
fixed on master
Comment 19 Commit Notification 2014-07-10 13:36:08 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d18308cf3b25ee30815bcaae73d49b5f5b8e734e

fdo#79358: ODF export: fix index boolean property export



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Commit Notification 2014-07-10 14:25:18 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb1ffce113e9110f87de25891f82b0a5752bd59c&h=libreoffice-4-3

fdo#79358: ODF export: fix index boolean property export


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Jean-Baptiste Faure 2014-07-11 04:26:13 UTC
Verified fixed under Ubuntu 14.04 x86-64 on Version: 4.3.1.0.0+
Build ID: be91c2086afef99dc9569ac6aa4835c5072bffdf

Thank you very much.
Best regards. JBF
Comment 22 Commit Notification 2014-07-11 08:16:50 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-3-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c293f897191ac4057d71155ec884f3b3c6d6c1f5&h=libreoffice-4-3-0

fdo#79358: ODF export: fix index boolean property export


It will be available already in LibreOffice 4.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 23 ribotb 2014-07-12 15:55:59 UTC
Hi,

Verified under Win7/x86 with :
Version: 4.3.1.0.0+
Build ID: 458e7220b08886b4072b1093e9ebdbfef3fe9ee7
TinderBox: Win-x86@42, Branch:libreoffice-4-3, Time: 2014-07-11_09:01:17

It's OK.

Thank you very much.
Best regards.

Bernard
Comment 24 Robinson Tryon (qubit) 2015-12-18 09:53:11 UTC Comment hidden (obsolete)