fdo#79358: ODF export: fix index boolean property export

Due to inverted conditional, only the default values were exported, not
the non-default ones...

(regression from 8a81f542a6ca566661305c53899b7e422cbaa432)

Change-Id: I0b1fc828230695709db49e1643801842d947403c
(cherry picked from commit d18308cf3b25ee30815bcaae73d49b5f5b8e734e)
Reviewed-on: https://gerrit.libreoffice.org/10194
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit eb1ffce113e9110f87de25891f82b0a5752bd59c)